--- a/_data/social.yaml
+++ b/_data/social.yaml
@@ -1,12 +1,12 @@
 items:
 	- title: Facebook
-	  url: https://www.facebook.com/AtelierAbbey/
+	  url: "https://www.facebook.com/AtelierAbbey"
 
 	- title: Twitter
-	  url: https://twitter.com/AtelierAbbey
+	  url: "https://twitter.com/AtelierAbbey"
 
 	- title: LinkedIn
-	  url: https://www.linkedin.com/company/10251995
+	  url: "https://www.linkedin.com/company/10251995"
 
 	- title: deviantArt
-	  url: http://atelier-abbey.deviantart.com/
+	  url: "http://atelier-abbey.deviantart.com"
